[package]
name = "silvery"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"

[dependencies.quicksilver]
git = "https://github.com/cedric-h/quicksilver.git"
branch = "update-rustsim-crates"
default-features = false
features = ["fonts"]
